[gd_scene load_steps=6 format=3 uid="uid://bjqaot0p6s5sg"]

[ext_resource type="PackedScene" uid="uid://d34hkypk02kw1" path="res://Scenes/Common/Buttons/settings_managed_text_button.tscn" id="1_2dgxu"]
[ext_resource type="Script" path="res://Scenes/Common/Buttons/Scripts/add_dice_button.gd" id="1_82tli"]
[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="2_lq7ou"]
[ext_resource type="PackedScene" uid="uid://bh4v1127nlkuw" path="res://Scenes/Common/Popups/add_dice_popup_menu.tscn" id="4_qkus1"]
[ext_resource type="PackedScene" uid="uid://biumolcfuvbmg" path="res://Scenes/Common/Popups/min_max_die_dialog.tscn" id="5_2e1bf"]

[node name="AddDiceButton" type="Control"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_82tli")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lq7ou")

[node name="AddButton" parent="MarginContainer" instance=ExtResource("1_2dgxu")]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
text = "Add Die"

[node name="AddDicePopupMenu" parent="." instance=ExtResource("4_qkus1")]

[node name="MinMaxDieDialog" parent="." instance=ExtResource("5_2e1bf")]
visible = false

[connection signal="pressed" from="MarginContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="new_imbalanced_die" from="AddDicePopupMenu" to="." method="_on_add_dice_popup_menu_new_imbalanced_die"]
[connection signal="new_min_max_die" from="AddDicePopupMenu" to="." method="_on_add_dice_popup_menu_new_min_max_die"]
[connection signal="new_non_number_die" from="AddDicePopupMenu" to="." method="_on_add_dice_popup_menu_new_non_number_die"]
[connection signal="reset_dice" from="AddDicePopupMenu" to="." method="_on_add_dice_popup_menu_reset_dice"]
